vpc-module/vpc.tf
# Creating VPC

resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr_block
  instance_tenancy = "default"

  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
    Name = "Terraform-3-Tier-Project-VPC"
  }
}
